force-app/main/default/src/objects/PJN_Account_Type_Setting__mdt/PJN_Account_Type_Setting__mdt.object-meta.xml
<CustomObject>
    <description>App: Patient Journey Navigator
Impacted Functionality: Account Search
Purpose: Define the Account Record Types that users can find in Account Search. This is the first step in setting up Account Search.
Metadata Relationship(s): --
Created by Mavens: Yes</description>
    <label>Account Type Setting</label>
    <pluralLabel>Account Type Settings</pluralLabel>
</CustomObject>