force-app/main/default/src/objects/PJN_Account_Type_Setting__mdt/fields/PJN_Acc_Lookup_Field_API_Name_For_Case__c.field-meta.xml
<CustomField>
    <fullName>PJN_Acc_Lookup_Field_API_Name_For_Case__c</fullName>
    <label>Acc Lookup Field API Name For Case</label>
    <length>64</length>
    <type>Text</type>
</CustomField>