force-app/main/default/src/objects/PJN_Account_Type_Setting__mdt/fields/PJN_Account_Search_Order__c.field-meta.xml
<CustomField>
    <fullName>PJN_Account_Search_Order__c</fullName>
    <description>The order this record type should appear in the search parameters.</description>
    <inlineHelpText>The order this record type should appear in the search parameters.</inlineHelpText>
    <label>Account Search Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>