force-app/main/default/src/objects/PJN_Account_Type_Setting__mdt/fields/PJN_Allow_Filter_by_Affiliation_Search__c.field-meta.xml
<CustomField>
    <fullName>PJN_Allow_Filter_by_Affiliation_Search__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, when searching for accounts, the user can filter to those affiliated with the selected account of this type. e.g. if an Physician is selected then filter institutions to those the Physician is affiliated with.</description>
    <inlineHelpText>If true, when searching for accounts, the user can filter to those affiliated with the selected account of this type</inlineHelpText>
    <label>Allow Filter by Affiliation Search</label>
    <type>Checkbox</type>
</CustomField>