force-app/main/default/src/objects/PJN_Account_Type_Setting__mdt/fields/PJN_Allow_Referred_By__c.field-meta.xml
<CustomField>
    <fullName>PJN_Allow_Referred_By__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This record type can be added as the referred by account on the case.</description>
    <inlineHelpText>This record type can be added as the referred by account on the case.</inlineHelpText>
    <label>Allow Referred By</label>
    <type>Checkbox</type>
</CustomField>