force-app/main/default/src/objects/PJN_Account_Type_Setting__mdt/fields/PJN_Change_Search_Tab_on_Select__c.field-meta.xml
<CustomField>
    <fullName>PJN_Change_Search_Tab_on_Select__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Change the search tab between Person and Institution automatically after selecting a result.</description>
    <inlineHelpText>Should the system change the search tab between Person and Institution automatically after selecting a result?</inlineHelpText>
    <label>Change Search Tab on Select</label>
    <type>Checkbox</type>
</CustomField>