force-app/main/default/src/objects/PJN_Account_Type_Setting__mdt/fields/PJN_Default_for_Search__c.field-meta.xml
<CustomField>
    <fullName>PJN_Default_for_Search__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The default record type to search.  Only specify one per record type/Person Account.</description>
    <inlineHelpText>The default record type to search.  Only specify one per record type/Person Account.</inlineHelpText>
    <label>Default for Search</label>
    <type>Checkbox</type>
</CustomField>