force-app/main/default/src/objects/PJN_Account_Type_Setting__mdt/fields/PJN_Include_in_Create__c.field-meta.xml
<CustomField>
    <fullName>PJN_Include_in_Create__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Should this record type be included in the create modal on the account search screen?</description>
    <inlineHelpText>Should this record type be included in the create modal on the account search screen?</inlineHelpText>
    <label>Include in Create?</label>
    <type>Checkbox</type>
</CustomField>