force-app/main/default/src/objects/PJN_Account_Type_Setting__mdt/fields/PJN_Include_in_Search__c.field-meta.xml
<CustomField>
    <fullName>PJN_Include_in_Search__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates this record type should be included as a search parameter.</description>
    <inlineHelpText>Indicates this record type should be included as a search parameter.</inlineHelpText>
    <label>Include in Search</label>
    <type>Checkbox</type>
</CustomField>