force-app/main/default/src/objects/PJN_Account_Type_Setting__mdt/fields/PJN_Is_Person_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>PJN_Is_Person_Record_Type__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Specifies if the record type is a person account record type.</description>
    <inlineHelpText>Specifies if the record type is a person account record type.</inlineHelpText>
    <label>Is Person Record Type?</label>
    <type>Checkbox</type>
</CustomField>