force-app/main/default/src/objects/PJN_Account_Type_Setting__mdt/fields/PJN_Records_Required_for_Create__c.field-meta.xml
<CustomField>
    <fullName>PJN_Records_Required_for_Create__c</fullName>
    <description>Comma separated list of Contact information Record Types required to create this type of account .</description>
    <inlineHelpText>Comma separated list of Contact information Record Types required to create this type of account .</inlineHelpText>
    <label>Records Required for Create</label>
    <length>50</length>
    <type>Text</type>
</CustomField>