force-app/main/default/src/objects/PJN_Account_Type_Setting__mdt/fields/PJN_Require_Institution_on_Create__c.field-meta.xml
<CustomField>
    <fullName>PJN_Require_Institution_on_Create__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This record type must have a related institution to create.</description>
    <inlineHelpText>This record type must have a related institution to create.</inlineHelpText>
    <label>Require Institution on Create</label>
    <type>Checkbox</type>
</CustomField>