force-app/main/default/src/objects/PJN_Account_Type_Setting__mdt/listViews/PJN_All_Account_Types.listView-meta.xml
<ListView>
    <fullName>PJN_All_Account_Types</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>PJN_Account_Record_Type__c</columns>
    <columns>PJN_Is_Person_Record_Type__c</columns>
    <columns>PJN_Include_in_Search__c</columns>
    <columns>PJN_Default_for_Search__c</columns>
    <columns>PJN_Account_Search_Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Account Types</label>
    <language>en_US</language>
</ListView>